Lab-5: added tests and README.md

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ lab_1_mtrx_tests/node_modules
 lab_2_mtrx_TDD/node_modules
 lab_3_mtrx_TestDoubles/node_modules
 lab_4_Cypress_tests/node_modules
+lab_5_appium_wdio/node_modules
 
 docker-compose.yml
 Dockerfile
