--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ lab_2_mtrx_TDD/node_modules
 lab_3_mtrx_TestDoubles/node_modules
 lab_4_Cypress_tests/node_modules
 lab_5_appium_wdio/node_modules
+lab_6_API_testing/node_modules
 
 docker-compose.yml
 Dockerfile
